--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 <body>
   Hello World
+  <h1>Create new project</h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam vel maxime porro necessitatibus natus quasi consequatur. Quo id omnis reprehenderit dignissimos blanditiis laborum accusantium necessitatibus.</p>
 </body>
 
 </html>
