--- a/Jandaulet.html
+++ b/Jandaulet.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello world</h1>
+    <h1>Hello world, Hi</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, ipsa illo. Quae, voluptas unde ad praesentium minima perferendis voluptates atque quibusdam delectus sit molestias commodi natus, ullam illo, impedit facere?</p>
 </body>
 </html>
